Add reset password endpoint
